Intermittent netwerk/test/unit/test_webtransport_simple.js | single tracking bug
Categories
(Core :: Networking, defect, P5)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr102 | --- | unaffected |
firefox106 | --- | unaffected |
firefox107 | --- | unaffected |
firefox108 | --- | wontfix |
firefox109 | --- | wontfix |
firefox110 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: kershaw)
References
(Regression)
Details
(Keywords: intermittent-failure, regression)
Attachments
(1 file)
Filed by: ctuns [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=396031689&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/ZbICkSp6RCagYFnM3rtIXg/runs/0/artifacts/public/logs/live_backing.log
Reftest URL: https://hg.mozilla.org/mozilla-central/raw-file/tip/layout/tools/reftest/reftest-analyzer.xhtml#logurl=https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/ZbICkSp6RCagYFnM3rtIXg/runs/0/artifacts/public/logs/live_backing.log&only_show_unexpected=1
[task 2022-11-09T09:56:56.369Z] 09:56:56 INFO - TEST-START | netwerk/test/unit/test_webtransport_simple.js
[task 2022-11-09T09:56:59.759Z] 09:56:59 WARNING - TEST-UNEXPECTED-FAIL | netwerk/test/unit/test_webtransport_simple.js | xpcshell return code: 0
[task 2022-11-09T09:56:59.759Z] 09:56:59 INFO - TEST-INFO took 3386ms
[task 2022-11-09T09:56:59.759Z] 09:56:59 INFO - >>>>>>>
[task 2022-11-09T09:56:59.759Z] 09:56:59 INFO - PID 4231 | [Parent 4231, Main Thread] WARNING: Couldn't get the user appdata directory. Crash events may not be produced.: file /builds/worker/checkouts/gecko/toolkit/crashreporter/nsExceptionHandler.cpp:2906
[task 2022-11-09T09:56:59.760Z] 09:56:59 INFO - (xpcshell/head.js) | test MAIN run_test pending (1)
[task 2022-11-09T09:56:59.761Z] 09:56:59 INFO - (xpcshell/head.js) | test run_next_test 0 pending (2)
[task 2022-11-09T09:56:59.762Z] 09:56:59 INFO - (xpcshell/head.js) | test MAIN run_test finished (2)
[task 2022-11-09T09:56:59.763Z] 09:56:59 INFO - running event loop
[task 2022-11-09T09:56:59.764Z] 09:56:59 INFO - PID 4231 | Couldn't convert chrome URL: chrome://branding/locale/brand.properties
[task 2022-11-09T09:56:59.766Z] 09:56:59 INFO - PID 4231 | [Parent 4231, Main Thread] WARNING: Could not get the program name for a cubeb stream.: 'NS_SUCCEEDED(rv)', file /builds/worker/checkouts/gecko/dom/media/CubebUtils.cpp:429
[task 2022-11-09T09:56:59.766Z] 09:56:59 INFO - netwerk/test/unit/test_webtransport_simple.js | Starting setup
[task 2022-11-09T09:56:59.766Z] 09:56:59 INFO - (xpcshell/head.js) | test setup pending (2)
[task 2022-11-09T09:56:59.766Z] 09:56:59 INFO - TEST-PASS | netwerk/test/unit/test_webtransport_simple.js | setup - [setup : 41] "38391" != null
[task 2022-11-09T09:56:59.766Z] 09:56:59 INFO - TEST-PASS | netwerk/test/unit/test_webtransport_simple.js | setup - [setup : 42] "38391" != ""
[task 2022-11-09T09:56:59.766Z] 09:56:59 INFO - (xpcshell/head.js) | test run_next_test 0 finished (2)
[task 2022-11-09T09:56:59.766Z] 09:56:59 INFO - (xpcshell/head.js) | test run_next_test 1 pending (2)
[task 2022-11-09T09:56:59.766Z] 09:56:59 INFO - (xpcshell/head.js) | test setup finished (2)
[task 2022-11-09T09:56:59.766Z] 09:56:59 INFO - "CONSOLE_MESSAGE: (info) No chrome package registered for chrome://branding/locale/brand.properties"
[task 2022-11-09T09:56:59.766Z] 09:56:59 INFO - netwerk/test/unit/test_webtransport_simple.js | Starting test_connect_wt
[task 2022-11-09T09:56:59.766Z] 09:56:59 INFO - (xpcshell/head.js) | test test_connect_wt pending (2)
[task 2022-11-09T09:56:59.766Z] 09:56:59 INFO - PID 4231 | [Parent 4231, Socket Thread] WARNING: NS_ENSURE_TRUE(inst) failed: file StaticComponents.cpp:11372
[task 2022-11-09T09:56:59.766Z] 09:56:59 INFO - (xpcshell/head.js) | test run_next_test 1 finished (2)
[task 2022-11-09T09:56:59.766Z] 09:56:59 INFO - "SessionId 0"
[task 2022-11-09T09:56:59.766Z] 09:56:59 INFO - (xpcshell/head.js) | test run_next_test 2 pending (2)
[task 2022-11-09T09:56:59.767Z] 09:56:59 INFO - (xpcshell/head.js) | test test_connect_wt finished (2)
[task 2022-11-09T09:56:59.767Z] 09:56:59 INFO - netwerk/test/unit/test_webtransport_simple.js | Starting test_reject
[task 2022-11-09T09:56:59.767Z] 09:56:59 INFO - (xpcshell/head.js) | test test_reject pending (2)
[task 2022-11-09T09:56:59.768Z] 09:56:59 INFO - (xpcshell/head.js) | test run_next_test 2 finished (2)
[task 2022-11-09T09:56:59.768Z] 09:56:59 INFO - "Error: 0 reason: "
[task 2022-11-09T09:56:59.769Z] 09:56:59 INFO - (xpcshell/head.js) | test run_next_test 3 pending (2)
[task 2022-11-09T09:56:59.769Z] 09:56:59 INFO - (xpcshell/head.js) | test test_reject finished (2)
[task 2022-11-09T09:56:59.769Z] 09:56:59 INFO - netwerk/test/unit/test_webtransport_simple.js | Starting test_closed_0ms
[task 2022-11-09T09:56:59.770Z] 09:56:59 INFO - (xpcshell/head.js) | test test_closed_0ms pending (2)
[task 2022-11-09T09:56:59.771Z] 09:56:59 INFO - (xpcshell/head.js) | test run_next_test 3 finished (2)
[task 2022-11-09T09:56:59.771Z] 09:56:59 INFO - (xpcshell/head.js) | test run_next_test 4 pending (2)
[task 2022-11-09T09:56:59.771Z] 09:56:59 INFO - (xpcshell/head.js) | test test_closed_0ms finished (2)
[task 2022-11-09T09:56:59.771Z] 09:56:59 INFO - "SessionId 8"
[task 2022-11-09T09:56:59.772Z] 09:56:59 INFO - netwerk/test/unit/test_webtransport_simple.js | Starting test_closed_100ms
[task 2022-11-09T09:56:59.772Z] 09:56:59 INFO - (xpcshell/head.js) | test test_closed_100ms pending (2)
[task 2022-11-09T09:56:59.773Z] 09:56:59 INFO - (xpcshell/head.js) | test run_next_test 4 finished (2)
[task 2022-11-09T09:56:59.773Z] 09:56:59 INFO - (xpcshell/head.js) | test run_next_test 5 pending (2)
[task 2022-11-09T09:56:59.774Z] 09:56:59 INFO - (xpcshell/head.js) | test test_closed_100ms finished (2)
[task 2022-11-09T09:56:59.774Z] 09:56:59 INFO - "SessionId 12"
[task 2022-11-09T09:56:59.774Z] 09:56:59 INFO - netwerk/test/unit/test_webtransport_simple.js | Starting test_wt_stream_create
[task 2022-11-09T09:56:59.775Z] 09:56:59 INFO - (xpcshell/head.js) | test test_wt_stream_create pending (2)
[task 2022-11-09T09:56:59.775Z] 09:56:59 INFO - (xpcshell/head.js) | test run_next_test 5 finished (2)
[task 2022-11-09T09:56:59.775Z] 09:56:59 INFO - TEST-PASS | netwerk/test/unit/test_webtransport_simple.js | test_wt_stream_create - [test_wt_stream_create : 162] 1 == 1
[task 2022-11-09T09:56:59.776Z] 09:56:59 INFO - "SessionId 16"
[task 2022-11-09T09:56:59.777Z] 09:56:59 INFO - TEST-PASS | netwerk/test/unit/test_webtransport_simple.js | test_wt_stream_create - [test_wt_stream_create : 129] true == true
[task 2022-11-09T09:56:59.777Z] 09:56:59 INFO - TEST-PASS | netwerk/test/unit/test_webtransport_simple.js | test_wt_stream_create - [test_wt_stream_create : 133] true == true
[task 2022-11-09T09:56:59.777Z] 09:56:59 INFO - (xpcshell/head.js) | test run_next_test 6 pending (2)
[task 2022-11-09T09:56:59.778Z] 09:56:59 INFO - (xpcshell/head.js) | test test_wt_stream_create finished (2)
[task 2022-11-09T09:56:59.778Z] 09:56:59 INFO - netwerk/test/unit/test_webtransport_simple.js | Starting test_wt_stream_send_and_stats
[task 2022-11-09T09:56:59.779Z] 09:56:59 INFO - (xpcshell/head.js) | test test_wt_stream_send_and_stats pending (2)
[task 2022-11-09T09:56:59.779Z] 09:56:59 INFO - (xpcshell/head.js) | test run_next_test 6 finished (2)
[task 2022-11-09T09:56:59.780Z] 09:56:59 INFO - "SessionId 24"
[task 2022-11-09T09:56:59.780Z] 09:56:59 INFO - TEST-PASS | netwerk/test/unit/test_webtransport_simple.js | test_wt_stream_send_and_stats - [test_wt_stream_send_and_stats : 133] true == true
[task 2022-11-09T09:56:59.780Z] 09:56:59 INFO - "Error: 0 reason: "
[task 2022-11-09T09:56:59.781Z] 09:56:59 INFO - TEST-PASS | netwerk/test/unit/test_webtransport_simple.js | test_wt_stream_send_and_stats - [test_wt_stream_send_and_stats : 192] true == true
[task 2022-11-09T09:56:59.781Z] 09:56:59 WARNING - TEST-UNEXPECTED-FAIL | netwerk/test/unit/test_webtransport_simple.js | test_wt_stream_send_and_stats - [test_wt_stream_send_and_stats : 239] 0 == 6
[task 2022-11-09T09:56:59.782Z] 09:56:59 INFO - /builds/worker/workspace/build/tests/xpcshell/tests/netwerk/test/unit/test_webtransport_simple.js:test_wt_stream_send_and_stats:239
[task 2022-11-09T09:56:59.782Z] 09:56:59 INFO - /builds/worker/workspace/build/tests/xpcshell/head.js:_do_main:240
[task 2022-11-09T09:56:59.782Z] 09:56:59 INFO - /builds/worker/workspace/build/tests/xpcshell/head.js:_execute_test:597
[task 2022-11-09T09:56:59.783Z] 09:56:59 INFO - -e:null:1
[task 2022-11-09T09:56:59.783Z] 09:56:59 INFO - exiting test
[task 2022-11-09T09:56:59.783Z] 09:56:59 INFO - Unexpected exception NS_ERROR_ABORT:
[task 2022-11-09T09:56:59.783Z] 09:56:59 INFO - _abort_failed_test@/builds/worker/workspace/build/tests/xpcshell/head.js:875:20
[task 2022-11-09T09:56:59.784Z] 09:56:59 INFO - do_report_result@/builds/worker/workspace/build/tests/xpcshell/head.js:976:5
[task 2022-11-09T09:56:59.784Z] 09:56:59 INFO - Assert<@/builds/worker/workspace/build/tests/xpcshell/head.js:73:21
[task 2022-11-09T09:56:59.784Z] 09:56:59 INFO - proto.report@resource://testing-common/Assert.jsm:228:10
[task 2022-11-09T09:56:59.785Z] 09:56:59 INFO - equal@resource://testing-common/Assert.jsm:270:8
[task 2022-11-09T09:56:59.785Z] 09:56:59 INFO - test_wt_stream_send_and_stats@/builds/worker/workspace/build/tests/xpcshell/tests/netwerk/test/unit/test_webtransport_simple.js:239:10
[task 2022-11-09T09:56:59.785Z] 09:56:59 INFO - _do_main@/builds/worker/workspace/build/tests/xpcshell/head.js:240:6
[task 2022-11-09T09:56:59.785Z] 09:56:59 INFO - _execute_test@/builds/worker/workspace/build/tests/xpcshell/head.js:597:5
[task 2022-11-09T09:56:59.786Z] 09:56:59 INFO - @-e:1:1
[task 2022-11-09T09:56:59.786Z] 09:56:59 INFO - exiting test
[task 2022-11-09T09:56:59.786Z] 09:56:59 INFO - "Force a GC"
[task 2022-11-09T09:56:59.787Z] 09:56:59 INFO - PID 4231 | [Parent 4231, Socket Thread] WARNING: cannot post event if not initialized: file /builds/worker/checkouts/gecko/netwerk/protocol/http/nsHttpConnectionMgr.cpp:522
[task 2022-11-09T09:56:59.787Z] 09:56:59 INFO - PID 4231 | [Parent 4231, Socket Thread] WARNING: cannot post event if not initialized: file /builds/worker/checkouts/gecko/netwerk/protocol/http/nsHttpConnectionMgr.cpp:200
[task 2022-11-09T09:56:59.787Z] 09:56:59 INFO - "Error: 0 reason: "
[task 2022-11-09T09:56:59.787Z] 09:56:59 INFO - "Error: 0 reason: "
[task 2022-11-09T09:56:59.788Z] 09:56:59 INFO - PID 4231 | JavaScript error: /builds/worker/workspace/build/tests/xpcshell/tests/netwerk/test/unit/test_webtransport_simple.js, line 23: TypeError: this.closed is not a function
[task 2022-11-09T09:56:59.788Z] 09:56:59 INFO - "CONSOLE_MESSAGE: (error) [JavaScript Error: "TypeError: this.closed is not a function" {file: "/builds/worker/workspace/build/tests/xpcshell/tests/netwerk/test/unit/test_webtransport_simple.js" line: 23}]
[task 2022-11-09T09:56:59.788Z] 09:56:59 INFO - onSessionClosed@/builds/worker/workspace/build/tests/xpcshell/tests/netwerk/test/unit/test_webtransport_simple.js:23:10
[task 2022-11-09T09:56:59.789Z] 09:56:59 INFO - _execute_test@/builds/worker/workspace/build/tests/xpcshell/head.js:705:23
[task 2022-11-09T09:56:59.789Z] 09:56:59 INFO - @-e:1:1
[task 2022-11-09T09:56:59.789Z] 09:56:59 INFO - "
[task 2022-11-09T09:56:59.789Z] 09:56:59 INFO - PID 4231 | [Parent 4231, Main Thread] WARNING: Extra shutdown CC: 'i < NORMAL_SHUTDOWN_COLLECTIONS', file /builds/worker/checkouts/gecko/xpcom/base/nsCycleCollector.cpp:3387
[task 2022-11-09T09:56:59.790Z] 09:56:59 INFO - PID 4231 | [Parent 4231, Main Thread] WARNING: OOPDeinit() without successful OOPInit(): file /builds/worker/checkouts/gecko/toolkit/crashreporter/nsExceptionHandler.cpp:3374
[task 2022-11-09T09:56:59.790Z] 09:56:59 INFO - PID 4231 | [Parent 4231, Main Thread] WARNING: NS_ENSURE_TRUE(Preferences::InitStaticMembers()) failed: file /builds/worker/checkouts/gecko/modules/libpref/Preferences.cpp:4628
[task 2022-11-09T09:56:59.790Z] 09:56:59 INFO - PID 4231 | [Parent 4231, Main Thread] WARNING: XPCOM object PerThreadData destroyed from static ctor/dtor: file /builds/worker/checkouts/gecko/xpcom/base/nsTraceRefcnt.cpp:215
[task 2022-11-09T09:56:59.791Z] 09:56:59 INFO - PID 4231 | [Parent 4231, Main Thread] WARNING: XPCOM object SourceList destroyed from static ctor/dtor: file /builds/worker/checkouts/gecko/xpcom/base/nsTraceRefcnt.cpp:215
[task 2022-11-09T09:56:59.791Z] 09:56:59 INFO - <<<<<<<
[task 2022-11-09T09:56:59.792Z] 09:56:59 INFO - TEST-START | netwerk/test/unit/test_webtransport_simple.js
Comment 1•3 years ago
|
||
Comment 2•3 years ago
|
||
Set release status flags based on info from the regressing bug 1790401
:kershaw, since you are the author of the regressor, bug 1790401, could you take a look?
For more information, please visit auto_nag documentation.
Comment hidden (Intermittent Failures Robot) |
Comment 4•3 years ago
|
||
Set release status flags based on info from the regressing bug 1790401
Comment hidden (Intermittent Failures Robot) |
Comment hidden (Intermittent Failures Robot) |
Comment hidden (Intermittent Failures Robot) |
Comment hidden (Intermittent Failures Robot) |
Comment hidden (Intermittent Failures Robot) |
Updated•3 years ago
|
Comment hidden (Intermittent Failures Robot) |
Assignee | ||
Comment 12•2 years ago
|
||
There are several races could happen in WebTransport code and this patch aims to fix them.
Updated•2 years ago
|
Comment hidden (Intermittent Failures Robot) |
Comment 14•2 years ago
|
||
Updated•2 years ago
|
Comment 15•2 years ago
|
||
bugherder |
Comment hidden (Intermittent Failures Robot) |
Description
•