Bug 1799843 - Fix intermittent failures, r=necko-reviewers,jesup

There are several races could happen in WebTransport code and this patch aims to fix them.

Differential Revision: https://phabricator.services.mozilla.com/D165619