netwerk/protocol/http/nsHttpTransaction.cpp
@@ -383,6 +383,15 @@ nsresult nsHttpTransaction::Init(
       }
     }
   }
+
+  RefPtr<nsHttpChannel> httpChannel = do_QueryObject(eventsink);
+  RefPtr<WebTransportSessionEventListener> listener =
+      httpChannel ? httpChannel->GetWebTransportSessionEventListener()
+                  : nullptr;
+  if (listener) {
+    mWebTransportSessionEventListener = std::move(listener);
+  }
+
   return NS_OK;
 }
 
@@ -431,13 +440,6 @@ nsresult nsHttpTransaction::AsyncRead(nsIStreamListener* listener,
   NS_ENSURE_SUCCESS(rv, rv);
 
   transactionPump.forget(pump);
-  RefPtr<nsHttpChannel> httpChannel = do_QueryObject(listener);
-  if (httpChannel) {
-    MutexAutoLock lock(mLock);
-    mWebTransportSessionEventListener =
-        httpChannel->GetWebTransportSessionEventListener();
-  }
-
   return NS_OK;
 }
 
