netwerk/protocol/webtransport/WebTransportSessionProxy.h
@@ -6,6 +6,7 @@
 #ifndef mozilla_net_WebTransportProxy_h
 #define mozilla_net_WebTransportProxy_h
 
+#include <functional>
 #include "nsIChannelEventSink.h"
 #include "nsIInterfaceRequestor.h"
 #include "nsIRedirectResultListener.h"
@@ -173,6 +174,8 @@ class WebTransportSessionProxy final : public nsIWebTransport,
   uint64_t mSessionId MOZ_GUARDED_BY(mMutex) = UINT64_MAX;
   uint32_t mCloseStatus MOZ_GUARDED_BY(mMutex) = 0;
   nsCString mReason MOZ_GUARDED_BY(mMutex);
+  // This is used to store events happened before OnSessionReady.
+  nsTArray<std::function<void()>> mPendingEvents MOZ_GUARDED_BY(mMutex);
 };
 
 }  // namespace mozilla::net
